crates/ogham-compiler/src/parser.rs
//! Hand-written recursive descent parser for Ogham.
//!
//! Produces a lossless CST via [`rowan::GreenNodeBuilder`].
//! The parser **never panics** — it always produces a tree, wrapping
//! unexpected tokens in [`SyntaxKind::Error`] nodes.

use rowan::GreenNode;

use crate::lexer;
use crate::syntax_kind::SyntaxKind::{self, *};

// ── Public API ─────────────────────────────────────────────────────────

/// Result of parsing an Ogham source file.
pub struct Parse {
    pub green: GreenNode,
    pub errors: Vec<ParseError>,
}

impl Parse {
    /// Build a rowan [`SyntaxNode`] from the parse result.
    pub fn syntax(&self) -> crate::syntax_kind::SyntaxNode {
        crate::syntax_kind::SyntaxNode::new_root(self.green.clone())
    }
}

/// A parse error with its byte range in source.
#[derive(Debug, Clone, PartialEq, Eq)]
pub struct ParseError {
    pub message: String,
    pub range: std::ops::Range<usize>,
}

/// Parse an Ogham source file into a lossless CST.
pub fn parse(source: &str) -> Parse {
    let raw = lexer::lex(source);
    let mut tokens = Vec::with_capacity(raw.len());
    let mut errors = Vec::new();

    for result in raw {
        match result {
            Ok(t) => tokens.push((SyntaxKind::from(t.kind), &source[t.span])),
            Err(span) => {
                errors.push(ParseError {
                    message: "unexpected character".into(),
                    range: span.clone(),
                });
                tokens.push((LexError, &source[span]));
            }
        }
    }

    let mut p = Parser {
        tokens,
        pos: 0,
        builder: rowan::GreenNodeBuilder::new(),
        errors,
        source,
    };
    p.parse_root();

    Parse {
        green: p.builder.finish(),
        errors: p.errors,
    }
}

// ── Parser internals ───────────────────────────────────────────────────

struct Parser<'s> {
    tokens: Vec<(SyntaxKind, &'s str)>,
    pos: usize,
    builder: rowan::GreenNodeBuilder<'static>,
    errors: Vec<ParseError>,
    source: &'s str,
}

impl<'s> Parser<'s> {
    // ── Helpers ────────────────────────────────────────────────────────

    /// Current token kind, skipping nothing.
    fn current(&self) -> Option<SyntaxKind> {
        self.tokens.get(self.pos).map(|(k, _)| *k)
    }

    /// Current token kind, skipping trivia.
    fn current_non_trivia(&self) -> Option<SyntaxKind> {
        let mut i = self.pos;
        while let Some((k, _)) = self.tokens.get(i) {
            if !is_trivia(*k) {
                return Some(*k);
            }
            i += 1;
        }
        None
    }

    /// Peek at the nth non-trivia token ahead (0 = current non-trivia).
    fn peek_non_trivia(&self, n: usize) -> Option<SyntaxKind> {
        let mut count = 0;
        let mut i = self.pos;
        while let Some((k, _)) = self.tokens.get(i) {
            if !is_trivia(*k) {
                if count == n {
                    return Some(*k);
                }
                count += 1;
            }
            i += 1;
        }
        None
    }

    /// Consume and emit the current token.
    fn bump(&mut self) {
        if let Some((kind, text)) = self.tokens.get(self.pos) {
            self.builder.token((*kind).into(), text);
            self.pos += 1;
        }
    }

    /// Consume and emit all trivia at the current position.
    fn eat_trivia(&mut self) {
        while let Some(k) = self.current() {
            if is_trivia(k) {
                self.bump();
            } else {
                break;
            }
        }
    }

    /// Expect a specific token kind, emit error if not found.
    fn expect(&mut self, kind: SyntaxKind) {
        self.eat_trivia();
        if self.current() == Some(kind) {
            self.bump();
        } else {
            let offset = self.current_offset();
            self.errors.push(ParseError {
                message: format!("expected {:?}", kind),
                range: offset..offset,
            });
        }
    }

    /// If current non-trivia token matches `kind`, eat trivia + bump and return true.
    fn eat(&mut self, kind: SyntaxKind) -> bool {
        self.eat_trivia();
        if self.current() == Some(kind) {
            self.bump();
            true
        } else {
            false
        }
    }

    fn current_offset(&self) -> usize {
        // Compute byte offset from token slices
        if let Some((_, text)) = self.tokens.get(self.pos) {
            let ptr = text.as_ptr() as usize;
            let base = self.source.as_ptr() as usize;
            ptr - base
        } else {
            self.source.len()
        }
    }

    /// Wrap the current token in an Error node and advance.
    fn error_recover(&mut self, msg: &str) {
        let offset = self.current_offset();
        let end = if let Some((_, text)) = self.tokens.get(self.pos) {
            offset + text.len()
        } else {
            offset
        };
        self.errors.push(ParseError {
            message: msg.into(),
            range: offset..end,
        });
        self.builder.start_node(Error.into());
        self.bump();
        self.builder.finish_node();
    }


    // ── Root ───────────────────────────────────────────────────────────

    fn parse_root(&mut self) {
        self.builder.start_node(Root.into());

        self.eat_trivia();
        if self.current_non_trivia() == Some(KwPackage) {
            self.parse_package_decl();
        }

        loop {
            self.eat_trivia();
            if self.current().is_none() {
                break;
            }
            match self.current_non_trivia() {
                Some(KwImport) => self.parse_import_decl(),
                Some(KwType) | Some(At) | Some(KwAnnotation) | Some(KwShape)
                | Some(KwEnum) | Some(KwService) => self.parse_top_level_decl(),
                None => break,
                _ => self.error_recover("expected top-level declaration"),
            }
        }

        self.eat_trivia();
        self.builder.finish_node();
    }

    // ── Package ────────────────────────────────────────────────────────

    fn parse_package_decl(&mut self) {
        self.builder.start_node(PackageDecl.into());
        self.eat_trivia();
        self.bump(); // 'package'
        self.eat_trivia();
        self.expect_ident();
        self.expect(Semicolon);
        self.builder.finish_node();
    }

    // ── Import ─────────────────────────────────────────────────────────

    fn parse_import_decl(&mut self) {
        self.builder.start_node(ImportDecl.into());
        self.eat_trivia();
        self.bump(); // 'import'
        self.eat_trivia();
        self.parse_import_path();
        self.eat_trivia();
        if self.current() == Some(KwAs) {
            self.bump(); // 'as'
            self.eat_trivia();
            self.expect_ident();
        }
        self.expect(Semicolon);
        self.builder.finish_node();
    }

    fn parse_import_path(&mut self) {
        self.builder.start_node(ImportPath.into());
        self.expect_ident();
        while let Some(k) = self.current() {
            if k == Dot || k == Slash || k == Minus {
                self.bump();
                self.expect_ident_or_keyword();
            } else {
                break;
            }
        }
        self.builder.finish_node();
    }

    // ── Top-level declarations ─────────────────────────────────────────

    fn parse_top_level_decl(&mut self) {
        self.eat_trivia();

        // Collect leading annotations
        let mut has_annotations = false;
        while self.current_non_trivia() == Some(At) {
            self.parse_annotation_call();
            has_annotations = true;
        }

        self.eat_trivia();
        match self.current() {
            Some(KwType) => self.parse_type_decl(),
            Some(KwShape) => self.parse_shape_decl(),
            Some(KwEnum) => self.parse_enum_decl(),
            Some(KwService) => self.parse_service_decl(),
            Some(KwAnnotation) => self.parse_annotation_decl(),
            _ => {
                if has_annotations {
                    self.error_recover("expected declaration after annotation");
                }
            }
        }
    }

    // ── Type ───────────────────────────────────────────────────────────

    fn parse_type_decl(&mut self) {
        self.builder.start_node(TypeDecl.into());
        self.eat_trivia();
        self.bump(); // 'type'
        self.eat_trivia();
        self.expect_ident(); // type name

        self.eat_trivia();
        match self.current() {
            Some(LAngle) => {
                self.parse_type_params();
                self.eat_trivia();
                self.parse_type_body();
            }
            Some(Eq) => self.parse_type_alias(),
            Some(LBrace) => self.parse_type_body(),
            _ => {
                let offset = self.current_offset();
                self.errors.push(ParseError {
                    message: "expected '=', '<', or '{'".into(),
                    range: offset..offset,
                });
            }
        }

        self.builder.finish_node();
    }

    fn parse_type_alias(&mut self) {
        self.builder.start_node(TypeAlias.into());
        self.bump(); // '='
        self.eat_trivia();
        match self.current_non_trivia() {
            Some(KwPick) => self.parse_pick_type(),
            Some(KwOmit) => self.parse_omit_type(),
            _ => self.parse_type_ref(),
        }
        self.expect(Semicolon);
        self.builder.finish_node();
    }

    fn parse_type_body(&mut self) {
        self.builder.start_node(TypeBody.into());
        self.expect(LBrace);

        loop {
            self.eat_trivia();
            match self.current_non_trivia() {
                Some(RBrace) | None => break,
                Some(At) => {
                    // Could be annotation on field, oneof, nested type/enum, or @reserved
                    self.parse_type_member();
                }
                Some(KwOneof) => self.parse_oneof_decl(),
                Some(KwType) => self.parse_nested_type_decl(),
                Some(KwEnum) => self.parse_nested_enum_decl(),
                _ => {
                    // Could be field_decl or shape_injection.
                    // Distinguish: shape_injection is `Ident(N..M)`.
                    // field_decl starts with a type_ref then ident then `=`.
                    self.parse_field_or_shape_injection();
                }
            }
        }

        self.expect(RBrace);
        self.builder.finish_node();
    }

    fn parse_type_member(&mut self) {
        self.eat_trivia();

        // Check for @reserved(N);
        if self.is_reserved_decl() {
            self.parse_reserved_decl();
            return;
        }

        // Collect annotations
        while self.current_non_trivia() == Some(At) {
            self.parse_annotation_call();
        }

        self.eat_trivia();
        match self.current() {
            Some(KwOneof) => self.parse_oneof_decl(),
            Some(KwType) => self.parse_nested_type_decl(),
            Some(KwEnum) => self.parse_nested_enum_decl(),
            _ => self.parse_field_or_shape_injection(),
        }
    }

    fn is_reserved_decl(&self) -> bool {
        // @reserved(N);
        let t0 = self.peek_non_trivia(0); // At
        let t1 = self.peek_non_trivia(1); // KwReserved
        t0 == Some(At) && t1 == Some(KwReserved)
    }

    fn parse_reserved_decl(&mut self) {
        self.builder.start_node(ReservedDecl.into());
        self.eat_trivia();
        self.bump(); // '@'
        self.eat_trivia();
        self.bump(); // 'reserved'
        self.expect(LParen);
        self.eat_trivia();
        self.expect_int();
        self.expect(RParen);
        // Optional semicolon — syntax examples omit it
        self.eat(Semicolon);
        self.builder.finish_node();
    }

    fn parse_field_or_shape_injection(&mut self) {
        // Lookahead: if after an identifier-like sequence we see `(` then `int..int)`,
        // it's a shape injection. Otherwise it's a field.
        // shape_injection: Ident(N..M)
        // field: type_ref ident = N [<- ...];
        self.eat_trivia();
        if self.is_shape_injection() {
            self.parse_shape_injection();
        } else {
            self.parse_field_decl();
        }
    }

    fn is_shape_injection(&self) -> bool {
        // Shape injection: Ident `(` IntLiteral `..` IntLiteral `)`
        // We check: current is Ident, next non-trivia is LParen
        let t0 = self.peek_non_trivia(0);
        let t1 = self.peek_non_trivia(1);
        t0 == Some(Ident) && t1 == Some(LParen)
            && self.peek_non_trivia(2) == Some(IntLiteral)
            && self.peek_non_trivia(3) == Some(DotDot)
    }

    fn parse_shape_injection(&mut self) {
        self.builder.start_node(ShapeInjection.into());
        self.eat_trivia();
        self.bump(); // shape name (Ident)
        self.expect(LParen);
        self.eat_trivia();
        self.expect_int(); // start
        self.expect(DotDot);
        self.eat_trivia();
        self.expect_int(); // end
        self.expect(RParen);
        self.builder.finish_node();
    }

    fn parse_field_decl(&mut self) {
        self.builder.start_node(FieldDecl.into());
        self.eat_trivia();
        self.parse_type_ref();
        self.eat_trivia();
        self.expect_ident(); // field name
        self.expect(Eq);
        self.eat_trivia();
        self.expect_int(); // field number

        // Optional projection mapping
        self.eat_trivia();
        if self.current() == Some(BackArrow) {
            self.parse_mapping_source();
        }

        self.expect(Semicolon);
        self.builder.finish_node();
    }

    fn parse_mapping_source(&mut self) {
        self.builder.start_node(MappingSource.into());
        self.bump(); // '<-'
        self.eat_trivia();
        self.parse_qualified_name_or_wildcard();
        self.builder.finish_node();
    }

    fn parse_qualified_name_or_wildcard(&mut self) {
        // SourceType.field or SourceType.oneof.*.field
        self.expect_ident();
        while self.current() == Some(Dot) {
            self.bump(); // '.'
            if self.current() == Some(Star) {
                self.bump(); // '*'
            } else {
                self.expect_ident();
            }
        }
    }

    // ── Oneof ──────────────────────────────────────────────────────────

    fn parse_oneof_decl(&mut self) {
        self.builder.start_node(OneofDecl.into());
        self.eat_trivia();
        self.bump(); // 'oneof'
        self.eat_trivia();
        self.expect_ident(); // oneof name
        self.expect(LBrace);

        loop {
            self.eat_trivia();
            match self.current_non_trivia() {
                Some(RBrace) | None => break,
                Some(At) => {
                    while self.current_non_trivia() == Some(At) {
                        self.parse_annotation_call();
                    }
                    self.parse_oneof_field();
                }
                _ => self.parse_oneof_field(),
            }
        }

        self.expect(RBrace);
        self.builder.finish_node();
    }

    fn parse_oneof_field(&mut self) {
        self.builder.start_node(OneofField.into());
        self.eat_trivia();
        self.parse_type_ref();
        self.eat_trivia();
        self.expect_ident(); // field name
        self.expect(Eq);
        self.eat_trivia();
        self.expect_int(); // field number

        // Optional projection mapping
        self.eat_trivia();
        if self.current() == Some(BackArrow) {
            self.parse_mapping_source();
        }

        self.expect(Semicolon);
        self.builder.finish_node();
    }

    // ── Nested type/enum ───────────────────────────────────────────────

    fn parse_nested_type_decl(&mut self) {
        self.builder.start_node(NestedTypeDecl.into());
        self.parse_type_decl();
        self.builder.finish_node();
    }

    fn parse_nested_enum_decl(&mut self) {
        self.builder.start_node(NestedEnumDecl.into());
        self.parse_enum_decl();
        self.builder.finish_node();
    }

    // ── Shape ──────────────────────────────────────────────────────────

    fn parse_shape_decl(&mut self) {
        self.builder.start_node(ShapeDecl.into());
        self.eat_trivia();
        self.bump(); // 'shape'
        self.eat_trivia();
        self.expect_ident(); // shape name

        self.eat_trivia();
        if self.current() == Some(LAngle) {
            self.parse_type_params();
        }

        self.expect(LBrace);

        loop {
            self.eat_trivia();
            match self.current_non_trivia() {
                Some(RBrace) | None => break,
                Some(At) => {
                    // annotated shape field
                    while self.current_non_trivia() == Some(At) {
                        self.parse_annotation_call();
                    }
                    self.eat_trivia();
                    self.parse_shape_field();
                }
                _ => {
                    // Could be shape_field or shape_include.
                    // shape_include: Ident [, Ident ...] ;
                    // shape_field: type_ref ident ;
                    // Distinguish: if after Ident we see `;` or `,` -> include.
                    self.parse_shape_member();
                }
            }
        }

        self.expect(RBrace);
        self.builder.finish_node();
    }

    fn parse_shape_member(&mut self) {
        self.eat_trivia();
        if self.is_shape_include() {
            self.parse_shape_include();
        } else {
            self.parse_shape_field();
        }
    }

    fn is_shape_include(&self) -> bool {
        // shape_include: Ident [, Ident]* ;
        // shape_field: type_ref ident ;
        // If Ident followed by `;` or `,` -> include.
        let t0 = self.peek_non_trivia(0);
        let t1 = self.peek_non_trivia(1);
        t0 == Some(Ident)
            && (t1 == Some(Semicolon) || t1 == Some(Comma))
    }

    fn parse_shape_include(&mut self) {
        self.builder.start_node(ShapeInclude.into());
        self.eat_trivia();
        self.bump(); // first ident
        while self.eat(Comma) {
            self.eat_trivia();
            self.expect_ident();
        }
        self.expect(Semicolon);
        self.builder.finish_node();
    }

    fn parse_shape_field(&mut self) {
        self.builder.start_node(ShapeField.into());
        self.eat_trivia();
        self.parse_type_ref();
        self.eat_trivia();
        self.expect_ident(); // field name

        // Trailing annotations on shape fields (e.g. `@default(now)`)
        self.eat_trivia();
        while self.current_non_trivia() == Some(At) {
            self.parse_annotation_call();
            self.eat_trivia();
        }

        self.expect(Semicolon);
        self.builder.finish_node();
    }

    // ── Enum ───────────────────────────────────────────────────────────

    fn parse_enum_decl(&mut self) {
        self.builder.start_node(EnumDecl.into());
        self.eat_trivia();
        self.bump(); // 'enum'
        self.eat_trivia();
        self.expect_ident(); // enum name
        self.expect(LBrace);

        loop {
            self.eat_trivia();
            match self.current_non_trivia() {
                Some(RBrace) | None => break,
                Some(At) => {
                    while self.current_non_trivia() == Some(At) {
                        self.parse_annotation_call();
                    }
                    self.eat_trivia();
                    self.parse_enum_value_decl();
                }
                _ => self.parse_enum_value_decl(),
            }
        }

        self.expect(RBrace);
        self.builder.finish_node();
    }

    fn parse_enum_value_decl(&mut self) {
        self.builder.start_node(EnumValueDecl.into());
        self.eat_trivia();
        self.expect_ident(); // value name
        self.expect(Eq);
        self.eat_trivia();
        self.expect_int();
        self.expect(Semicolon);
        self.builder.finish_node();
    }

    // ── Service & RPC ──────────────────────────────────────────────────

    fn parse_service_decl(&mut self) {
        self.builder.start_node(ServiceDecl.into());
        self.eat_trivia();
        self.bump(); // 'service'
        self.eat_trivia();
        self.expect_ident(); // service name
        self.expect(LBrace);

        loop {
            self.eat_trivia();
            match self.current_non_trivia() {
                Some(RBrace) | None => break,
                Some(At) => {
                    while self.current_non_trivia() == Some(At) {
                        self.parse_annotation_call();
                    }
                    self.eat_trivia();
                    if self.current_non_trivia() == Some(KwRpc) {
                        self.parse_rpc_decl();
                    }
                }
                Some(KwRpc) => self.parse_rpc_decl(),
                _ => self.error_recover("expected 'rpc' declaration"),
            }
        }

        self.expect(RBrace);
        self.builder.finish_node();
    }

    fn parse_rpc_decl(&mut self) {
        self.builder.start_node(RpcDecl.into());
        self.eat_trivia();
        self.bump(); // 'rpc'
        self.eat_trivia();
        self.expect_ident(); // rpc name
        self.expect(LParen);
        self.parse_rpc_param();
        self.expect(RParen);
        self.expect(Arrow);
        self.parse_rpc_param();
        self.expect(Semicolon);
        self.builder.finish_node();
    }

    fn parse_rpc_param(&mut self) {
        self.builder.start_node(RpcParam.into());
        self.eat_trivia();
        match self.current() {
            Some(KwVoid) => self.bump(),
            Some(KwStream) => {
                self.bump(); // 'stream'
                self.eat_trivia();
                if self.current() == Some(LBrace) {
                    self.parse_inline_type();
                } else {
                    self.parse_type_ref();
                }
            }
            Some(LBrace) => self.parse_inline_type(),
            _ => self.parse_type_ref(),
        }
        self.builder.finish_node();
    }

    fn parse_inline_type(&mut self) {
        self.builder.start_node(InlineType.into());
        self.expect(LBrace);
        loop {
            self.eat_trivia();
            match self.current_non_trivia() {
                Some(RBrace) | None => break,
                Some(At) => {
                    while self.current_non_trivia() == Some(At) {
                        self.parse_annotation_call();
                    }
                    self.parse_field_decl();
                }
                _ => self.parse_field_decl(),
            }
        }
        self.expect(RBrace);
        self.builder.finish_node();
    }

    // ── Annotation definition ──────────────────────────────────────────

    fn parse_annotation_decl(&mut self) {
        self.builder.start_node(AnnotationDecl.into());
        self.eat_trivia();
        self.bump(); // 'annotation'
        self.eat_trivia();
        self.expect_ident(); // annotation name
        self.eat_trivia();
        self.expect(KwFor);
        self.parse_annotation_targets();
        self.expect(LBrace);

        loop {
            self.eat_trivia();
            match self.current_non_trivia() {
                Some(RBrace) | None => break,
                _ => self.parse_annotation_member(),
            }
        }

        self.expect(RBrace);
        self.builder.finish_node();
    }

    fn parse_annotation_targets(&mut self) {
        self.builder.start_node(AnnotationTargets.into());
        self.eat_trivia();
        self.expect_ident_or_keyword(); // target (type, field, etc. — some are keywords)
        while self.eat(Pipe) {
            self.eat_trivia();
            self.expect_ident_or_keyword();
        }
        self.builder.finish_node();
    }

    fn parse_annotation_member(&mut self) {
        self.eat_trivia();
        // Could be:
        // 1. type_ref [?] ident [= default] ;           (annotation field)
        // 2. ident : { ... }                             (inline annotation type)
        // 3. qualified::Name(...) ;                      (annotation composition)

        // Check for composition: Ident :: Ident
        if self.is_annotation_composition() {
            self.parse_annotation_composition();
            return;
        }

        // Check for inline type: ident `:` `{`
        if self.is_inline_annotation_type() {
            self.parse_inline_annotation_type_member();
            return;
        }

        // Otherwise it's a field
        self.parse_annotation_field();
    }

    fn is_annotation_composition(&self) -> bool {
        // qualified::Name
        let t0 = self.peek_non_trivia(0);
        let t1 = self.peek_non_trivia(1);
        t0 == Some(Ident) && t1 == Some(ColonColon)
    }

    fn is_inline_annotation_type(&self) -> bool {
        let t0 = self.peek_non_trivia(0);
        let t1 = self.peek_non_trivia(1);
        t0 == Some(Ident) && t1 == Some(Colon)
    }

    fn parse_annotation_composition(&mut self) {
        self.builder.start_node(AnnotationComposition.into());
        self.eat_trivia();
        self.bump(); // qualifier ident
        self.eat_trivia();
        self.bump(); // '::'
        self.eat_trivia();
        self.expect_ident(); // annotation name

        self.eat_trivia();
        if self.current() == Some(LParen) {
            self.bump(); // '('
            self.eat_trivia();
            if self.current_non_trivia() != Some(RParen) {
                self.parse_annotation_args_inner();
            }
            self.expect(RParen);
        }

        self.expect(Semicolon);
        self.builder.finish_node();
    }

    fn parse_inline_annotation_type_member(&mut self) {
        self.builder.start_node(AnnotationField.into());
        self.eat_trivia();
        self.bump(); // name ident
        self.eat_trivia();
        self.bump(); // ':'
        self.parse_inline_annotation_type_body();
        self.builder.finish_node();
    }

    fn parse_inline_annotation_type_body(&mut self) {
        self.builder.start_node(InlineAnnotationType.into());
        self.expect(LBrace);
        loop {
            self.eat_trivia();
            match self.current_non_trivia() {
                Some(RBrace) | None => break,
                _ => self.parse_annotation_member(),
            }
        }
        self.expect(RBrace);
        self.builder.finish_node();
    }

    fn parse_annotation_field(&mut self) {
        self.builder.start_node(AnnotationField.into());
        self.eat_trivia();
        self.parse_type_ref();
        self.eat_trivia();

        // Optional `?`
        if self.current() == Some(Question) {
            self.bump();
            self.eat_trivia();
        }

        self.expect_ident(); // field name

        // Optional default value
        self.eat_trivia();
        if self.current() == Some(Eq) {
            self.bump(); // '='
            self.eat_trivia();
            self.parse_literal_or_annotation_value();
        }

        self.expect(Semicolon);
        self.builder.finish_node();
    }

    // ── Annotation call ────────────────────────────────────────────────

    fn parse_annotation_call(&mut self) {
        self.builder.start_node(AnnotationCall.into());
        self.eat_trivia();
        self.bump(); // '@'
        self.eat_trivia();

        // Built-in: @default(...), @cast(...), @removed(...), @reserved(...)
        // Library: @lib::Name(...)
        match self.current() {
            Some(KwDefault) | Some(KwCast) | Some(KwRemoved) | Some(KwReserved) => {
                self.bump(); // builtin name
                if self.eat(LParen) {
                    self.eat_trivia();
                    if self.current_non_trivia() != Some(RParen) {
                        self.parse_annotation_args_inner();
                    }
                    self.expect(RParen);
                }
            }
            _ => {
                // Library annotation: ident :: ident ( args )
                self.expect_ident(); // library name
                self.expect(ColonColon);
                self.eat_trivia();
                self.expect_ident(); // annotation name
                self.eat_trivia();
                if self.current() == Some(LParen) {
                    self.bump();
                    self.eat_trivia();
                    if self.current_non_trivia() != Some(RParen) {
                        self.parse_annotation_args_inner();
                    }
                    self.expect(RParen);
                }
            }
        }

        self.builder.finish_node();
    }

    fn parse_annotation_args_inner(&mut self) {
        self.builder.start_node(AnnotationArgs.into());
        self.parse_annotation_arg();
        while self.eat(Comma) {
            self.eat_trivia();
            if self.current_non_trivia() == Some(RParen) {
                break; // trailing comma
            }
            self.parse_annotation_arg();
        }
        self.builder.finish_node();
    }

    fn parse_annotation_arg(&mut self) {
        self.builder.start_node(AnnotationArg.into());
        self.eat_trivia();
        // name = value   OR   just a literal value (for positional)
        if self.peek_non_trivia(1) == Some(Eq) {
            self.expect_ident_or_keyword(); // param name (could be `fallback`)
            self.bump(); // '='
            self.eat_trivia();
        }
        self.parse_annotation_value();
        self.builder.finish_node();
    }

    fn parse_annotation_value(&mut self) {
        self.builder.start_node(AnnotationValue.into());
        self.eat_trivia();
        match self.current() {
            Some(LBrace) => {
                self.bump(); // '{'
                self.eat_trivia();
                if self.current_non_trivia() != Some(RBrace) {
                    self.parse_annotation_value_entries();
                }
                self.expect(RBrace);
            }
            _ => self.parse_literal_or_annotation_value(),
        }
        self.builder.finish_node();
    }

    fn parse_annotation_value_entries(&mut self) {
        // Could be key=value pairs or a plain list
        self.parse_annotation_value_entry();
        while self.eat(Comma) {
            self.eat_trivia();
            if self.current_non_trivia() == Some(RBrace) {
                break;
            }
            self.parse_annotation_value_entry();
        }
    }

    fn parse_annotation_value_entry(&mut self) {
        self.eat_trivia();
        // key = value, key : value, or just value
        let has_key = self.peek_non_trivia(1) == Some(Eq)
            || self.peek_non_trivia(1) == Some(Colon);
        if has_key {
            self.bump(); // key
            self.eat_trivia();
            self.bump(); // '=' or ':'
            self.eat_trivia();
            self.parse_annotation_value();
        } else {
            self.parse_annotation_value();
        }
    }

    fn parse_literal_or_annotation_value(&mut self) {
        match self.current() {
            Some(StringLiteral) | Some(IntLiteral) | Some(FloatLiteral) => self.bump(),
            Some(KwTrue) | Some(KwFalse) => self.bump(),
            Some(KwNow) => self.bump(),
            Some(Minus) => {
                // Negative number
                self.bump(); // '-'
                if self.current() == Some(IntLiteral) || self.current() == Some(FloatLiteral) {
                    self.bump();
                }
            }
            Some(Ident) => self.bump(), // enum value reference, etc.
            Some(LBrace) => {
                // Nested struct value
                self.bump(); // '{'
                self.eat_trivia();
                if self.current_non_trivia() != Some(RBrace) {
                    self.parse_annotation_value_entries();
                }
                self.expect(RBrace);
            }
            _ => {
                self.error_recover("expected value");
            }
        }
    }

    // ── Type references ────────────────────────────────────────────────
